ingress-rules.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-rules

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: ingress-rules
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - k8s-cluster-apps.unids.com
    secretName: apps-tls
  rules:
  - host: k8s-cluster-apps.unids.com
    http:
      paths:
      - path: /wordpress(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: wordpress
            namespace: wordpress
            port:
              number: 80
      - path: /odoo(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: odoo
            namespace: odoo
            port:
              number: 8069
